# miniPictureReader_2

./: .gitignore  LICENSE  README.md  TRAE-SOLO-规划Python看图工具-20260719.md  checklist.md  main.py  pyproject.toml  requirements-raw.txt  spec.md  tasks.md
.github/workflows/: build.yml
core/: __init__.py  batch.py  editor.py  exif_handler.py  filters.py  interfaces.py  loader.py  raw_loader.py
plugins/: example_plugin.py
tests/: conftest.py  test_editor.py  test_editor_phase3.py  test_exif.py  test_filters.py  test_loader.py  test_phase4.py
ui/: adjust_panel.py  app.py  batch_dialog.py  edit_panel.py  exif_panel.py  file_panel.py  slideshow.py  thumb_view.py  viewer.py
